# wxclip

./: CMakeLists.txt  README.md  mainApp.wxg
dependencies/: CMakeLists.txt
dependencies/itlib/: CMakeLists.txt
src/: CMakeLists.txt  actions.cc  actions.hxx  appgui.cc  appgui.hxx  cmd_history.cc  cmd_history.hxx  main.cc  popen2.cc  popen2.hxx  system.cc  system.hxx  wxgui.cc  wxgui.hxx
